# FreeSampler_v0.3

./: README.md
FreeSampler_v0.3/: CMakeLists.txt  README.md
FreeSampler_v0.3/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerSound.h  SamplerVoice.h
